# dtracker_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_tests.bat
include/audio/: device_manager.hpp  engine.hpp  playback_manager.hpp
include/audio/playback/: proxy_playback_unit.hpp  tone_playback.hpp
include/audio/waves/: sine_wav.hpp
include/dtracker/audio/: device_manager.hpp  engine.hpp  i_engine.hpp  i_playback_manager.hpp  playback_manager.hpp  sample_data.hpp  sample_manager.hpp  types.hpp
include/dtracker/audio/playback/: buffer_pool.hpp  mixer_playback.hpp  pattern_playback_unit.hpp  playback_unit.hpp  proxy_playback_unit.hpp  sample_playback.hpp  sample_playback_unit.hpp  tone_playback.hpp  track_playback_unit.hpp  unit_pool.hpp
include/dtracker/audio/types/: audio_settings.hpp  sample_data.hpp
include/dtracker/audio/types/waves/: sine_wav.hpp
include/dtracker/sample/: cache.hpp  i_manager.hpp  manager.hpp  types.hpp
include/dtracker/tracker/: i_track_manager.hpp  track_manager.hpp  types.hpp
include/dtracker/tracker/types/: active_pattern.hpp
include/engine/: audio_engine.hpp  audio_settings.hpp  device_manager.hpp
src/audio/: device_manager.cpp  engine.cpp  playback_manager.cpp  sample_manager.cpp
src/audio/playback/: buffer_pool.cpp  mixer_playback.cpp  pattern_playback_unit.cpp  proxy_playback_unit.cpp  sample_playback.cpp  sample_playback_unit.cpp  tone_playback.cpp  track_playback_unit.cpp  unit_pool.cpp
src/engine/: audio_engine.cpp  device_manager.cpp
src/sample/: cache.cpp  manager.cpp
src/tracker/: track_manager.cpp
tests/: CMakeLists.txt  audio_engine_test.cpp  playback_units_test.cpp  sample_cache_test.cpp  sample_manager_test.cpp  track_manager_test.cpp
tests/integration/: engine_integration_test.cpp
tests/mocks/: mock_engine.hpp  mock_mixer_playback_unit.hpp  mock_pattern_playback_unit.hpp  mock_playback_unit.hpp  mock_sample_manager.hpp  mock_stereo_unit.hpp  mock_unit_pool.hpp
tests/unit/: buffer_pool_test.cpp  playback_manager_test.cpp  playback_units_test.cpp  sample_manager_test.cpp  track_manager_test.cpp  unit_pool_test.cpp
